--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="container">
             <header class="main-header"><!--inicio do header do main-->
                 <p class="body-2">100k visualizações de página</p>
-                <div class="price"><!--inicio do container do preço-->
+                <div class="price no-mobile"><!--inicio do container do preço-->
                     <h2 class="h5 bold">$ 16.00</h2>
                     <p class="body-2">/mês</p>
                 </div><!--fim do container do preço-->
@@ -32,8 +32,40 @@
 
             <div class="slider-container">
                 <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
-            </div>
+            </div> <!--fim do slider container-->
+
+            <div class="price on-mobile"><!--inicio do container do preço-->
+                <h2 class="h5 bold">$ 16.00</h2>
+                <p class="body-2">/mês</p>
+            </div><!--fim do container do preço-->
+
+            <div class="plans-container">
+                <p class="caption"><span class="no-mobile">Faturamento </span> mensal</p>
+                <div class="toggle start">
+                    <div class="circle"></div>
+                </div>
+                <p class="caption"><span class="no-mobile">Faturamento </span> anual</p>
+                <div class="discount-container discount">
+                    <p><span class="on-mobile">-</span>25% <span class="no-mobile">de desconto</span></p>
+                </div>
+            </div><!--fim do plans container-->
+
+            <hr>
+
+            <footer>
+                <ul>
+                    <li class="body-2"> <img src="img/icon-check.svg" alt="icon-check"> Websites ilimitados</li>
+                    <li class="body-2"> <img src="img/icon-check.svg" alt="icon-check"> 100% de propriedade de dados</li>
+                    <li class="body-2"> <img src="img/icon-check.svg" alt="icon-check"> relatórios de e-mail</li>
+                </ul>
+
+                <button>Começar já</button>
+            </footer>
+
         </div><!--fim do container-->
     </main>
+
+    <script src="js/toggle.js"></script>
+    <script src="js/sliderBar.js"></script>
 </body>
 </html>
