sistema parcialmente concluido

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </header><!--fim do header do main-->
 
             <div class="slider-container">
-                <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+                <input type="range" data-price-input="" min="1" max="100" value="50" class="slider" id="myRange">
             </div> <!--fim do slider container-->
 
             <div class="price on-mobile"><!--inicio do container do preço-->
