--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <main>
         <div class="container">
             <header class="main-header"><!--inicio do header do main-->
-                <p class="body-2">100k visualizações de página</p>
+                <p id="pageViews" class="body-2">100k visualizações de página</p>
                 <div class="price no-mobile"><!--inicio do container do preço-->
-                    <h2 class="h5 bold">$ 16.00</h2>
+                    <h2 id="money" class="h5 bold">$ 16.00</h2>
                     <p class="body-2">/mês</p>
                 </div><!--fim do container do preço-->
             </header><!--fim do header do main-->
